# sPHENIX_INTT_simulation

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  exampleB4c.cc  gui.mac  init_vis.mac  run1.mac  run_electron.mac  vis.mac
include/: B4PrimaryGeneratorAction.hh  B4RunAction.hh  B4cActionInitialization.hh  B4cDetectorConstruction.hh  B4cEventAction.hh  Constants.hh  SteppingAction.hh  TrackingAction.hh
src/: #TrackingAction.cc#  B4PrimaryGeneratorAction.cc  B4RunAction.cc  B4aSteppingAction.cc.bak  B4cActionInitialization.cc  B4cCalorimeterSD.cc  B4cDetectorConstruction.cc  B4cDetectorConstruction.cc.bak  B4cDetectorConstruction.cc.before_communication_with_Oleg  B4cEventAction.cc  SteppingAction.cc  TrackingAction.cc
